# DawProject-Tool

./: .gitignore  README.md  build_for_mac_linux.sh  build_vst_tools.sh
.github/workflows/: build.yml
ffx.tools.DawProject.xrnx/: .gitignore  LICENSE  main.lua  manifest.xml
ffx.tools.DawProject.xrnx/lib/: Cache.lua  DeviceHelpers.lua  DeviceSubstitutionHelpers.lua  FancyStatusMessage.lua  GeneralHelpers.lua  NoteAbstraction.lua  ProcessSlicer.lua  ReduxPluginHelpers.lua  SongHelpers.lua  lib-configurator.lua
ffx.tools.DawProject.xrnx/templates/: redux_instrument.xml
vst2info-tool/: Cargo.toml
vst2info-tool/src/: main.rs
vst3info-tool/: .cursorignore  .gitignore  .gitmodules  Cargo.toml  Cross-windows.dockerfile  Cross.toml
vst3info-tool/src/: main.rs
