[package]
name = "vst3info-tool"
version = "0.1.0"
edition = "2024"
"authors" = ["Jurek Raben"]
repository = "https://github.com/Jurek-Raben/DawProject-Tool"

[dependencies]
json = "0.12.4"
vst3 = "0.1.2"
libloading = "0.8.8"
libc = "0.2.175"

# Platform-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]


[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "winnt",
    "fileapi",
    "processenv",
    "winbase",
    "handleapi",
    "std"
] }
